--- a/hw1/02-palindrome.html
+++ b/hw1/02-palindrome.html
@@ -8,13 +8,18 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
     <script defer src="02-palindrome.js"></script>
+    <style>
+      /* Fix Contrast Error */
+      .text-green {color:green;} 
+      .text-red {color:darkred;}
+    </style>
   </head>
   <body class="bg-primary d-flex vh-100">
     <main class="container w-auto mt-5" role="main">
       <section class="bg-light rounded p-4" aria-labelledby="h1-Exercise02-Palindrome">
         <h1 id="h1-Exercise02-Palindrome" class="mb-4">Exercise 02 - Palindrome</h1>
         <div class="mb-4">
-          <label for="inputID">Enter a positive number: </label>
+          <label for="inputID">Enter a positive number:</label>
           <input 
             id="inputID" 
             type="number" 
