--- a/hw2/03-count.html
+++ b/hw2/03-count.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>03 - Count</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>03 - Count</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
     <script defer src="03-count.js"></script>
   </head>
-  <body>
-    <main>
-      <h1>Exercise 03 - Count</h1>
+  <body class="d-flex vh-100">
+    <main class="bg-white container rounded p-4 m-auto">
+      <h1 class="text-center">Exercise 03 - Count</h1>
       <hr />
       <div>
-        <label>Highlight all occurences of a word:</label>
-        <input />
+        <label for="wordID">Highlight all occurences of a word:</label>
+        <input id="wordID" type="text" aria-required="true"/>
       </div>
       <hr />
-      <div>
+      <div id="textID">
         It was the best of times, it was the worst of times, it was the age of
         wisdom, it was the age of foolishness, it was the epoch of belief, it
         was the epoch of incredulity, it was the season of Light, it was the
