--- a/hw2/03-count.html
+++ b/hw2/03-count.html
@@ -8,9 +8,14 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
     <script defer src="03-count.js"></script>
+    <style>
+      body { background-color: #00435f; }
+      mark { background-color: #ffff00; }
+      main { max-width: 32rem; }
+    </style>
   </head>
   <body class="d-flex vh-100">
-    <main class="bg-white container rounded p-4 m-auto">
+    <main class="bg-white rounded p-4 m-auto">
       <h1 class="text-center">Exercise 03 - Count</h1>
       <hr />
       <div>
