--- a/hw2/04-background.html
+++ b/hw2/04-background.html
@@ -8,10 +8,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"/>
     <script defer src="04-background.js"></script>
+    <style> main { max-width: 32rem; } </style>
   </head>
-  <body class="vh-100">
-    <main class="bg-light container rounded mt-5 p-3">
-      <h1 class="pb-2">Exercise 04 - Background</h1>
+  <body class="d-flex vh-100">
+    <main class="bg-light rounded mt-5 p-3 m-auto">
+      <h1 class="pb-3 my-2">Exercise 04 - Background</h1>
       <p>
         The background color will change every few seconds (as indicated below).
         You can stop this behavior and you can also change how often the
