--- a/hw2/05-form.html
+++ b/hw2/05-form.html
@@ -9,9 +9,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"/>
     <script defer src="05-form.js"></script>
+    <style> main { max-width: 32rem; } </style>
   </head>
-  <body class="bg-dark vh-100">
-    <main class="d-flex justify-content-center mt-5">
+  <body class="bg-dark d-flex vh-100">
+    <main class="justify-content-center mt-5 mx-auto">
       <form id="formID" action="post"
             class="bg-light justify-content-start rounded p-3">
         <h1 class="text-center py-3">Exercise 05 - Form</h1>
