--- a/hw3/01-characters.html
+++ b/hw3/01-characters.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>01 - Characters</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="styles.css" />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="styles.css"/>
     <script defer src="01-characters.js"></script>
   </head>
-  <body>
+  <body class="vh-100">
     <main>
-      <h1>Exercise 01 - Characters</h1>
-      <section></section>
+      <h1 class="fw-bold p-4">Exercise 01 - Characters</h1>
+      <section class="container"></section>
     </main>
   </body>
 </html>
